@@ -22,7 +22,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.wataskmanagementapi.exceptions.v2.enums.ErrorMessages.TASK_RECONFIGURATION_EXECUTE_TASKS_TO_RECONFIGURE_FAILED;
 
@@ -64,7 +63,7 @@ public class ExecuteTaskReconfigurationService implements TaskOperationPerformSe
 
         List<String> taskIds = taskResources.stream()
             .map(TaskResource::getTaskId)
-            .collect(Collectors.toList());
+            .toList();
 
         List<String> failedTaskIds = executeReconfiguration(taskIds,
             successfulTaskResources,
